--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       </div>
       <ul class="grid"></ul>
     </div>
-
-    <script src="./index.js"></script>
+    <!-- type="module" -->
+    <!-- <script src="./index.js"></script> -->
+    <script type="module" src="./review.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   </body>
 </html>
